Back back back
Como ya dije en el grupo, por ahora estara todo en G4D controller, metnale speed a esos cambios con la id trasnasaccion para aplicar paralelismo.